--- a/mtaapp/templates/base.html
+++ b/mtaapp/templates/base.html
@@ -51,7 +51,7 @@
 
 
            <li class="">
-              <a href="/account/currrentPage"><span class="glyphicon glyphicon-book"></span> Current Quarter</a>
+              <a href="/account/currentPage"><span class="glyphicon glyphicon-book"></span> Current Quarter</a>
            </li>
            <li class="">
               <a href="/account/nextPage"><span class="glyphicon glyphicon-book"></span> Next Quarter</a>
